--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,7 @@ name = "example"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13, <4.0"
+requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.115.12",
-    "uvicorn>=0.34.2",
+    "fastapi[standard]>=0.115.12",
 ]
