--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - 8000:8000
     networks:
       - postgres-network
+    depends_on:
+      - database
   
   database:
     image: postgres
