--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,8 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "sqlalchemy>=2.0.40",
 ]
+
+[dependency-groups]
+test = [
+    "pytest>=8.3.5",
+]
