--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
     depends_on:
       database:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000"]
+      interval: 10s
+      timeout: 60s
+      retries: 10
   
   database:
     image: postgres
@@ -47,7 +52,8 @@ services:
     depends_on:
       database:
         condition: service_healthy
-        restart: true
+      app:
+        condition: service_healthy
     networks:
       - postgres-network
     environment: # needs this to connect to the database
