--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "psycopg2-binary>=2.9.10",
+    "pylint>=3.3.7",
     "sqlalchemy>=2.0.40",
 ]
 
