feat(infra): dockerfile prod not ready dor use

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-# Production Environment Variables Template
-# Copy this file to .env and fill in your values
+# Environment Variables Template
 
 # Database Configuration
 DB_PASSWORD=your-secure-database-password-here
@@ -10,18 +9,6 @@ PGADMIN_EMAIL=admin@yourcompany.com
 PGADMIN_PASSWORD=your-secure-pgadmin-password-here
 
 # Application Configuration
-ENV=production
+ENV=
+# TESTING or PRODUCTION
 SECRET_KEY=your-secret-key-here-minimum-32-characters
-
-# Optional: External Services
-# REDIS_URL=redis://redis:6379/0
-# SENTRY_DSN=your-sentry-dsn-here
-
-# Optional: Monitoring
-# PROMETHEUS_MULTIPROC_DIR=/tmp
-
-# Optional: Email (if implementing notifications)
-# SMTP_HOST=your-smtp-host
-# SMTP_PORT=587
-# SMTP_USER=your-smtp-user
-# SMTP_PASSWORD=your-smtp-password
